<resources>
    <string name="bt_error">Seu dispositivo não suporta Bluetooth</string>
    <string name="ok_txt">OK</string>
    <string name="sqlite_error">Um erro ocorreu na recuperação de dados do banco local</string>
    <string name="conexao_error">Erro ao enviar requisição ao servidor de aplicação</string>

    <string name="app_name">TaxiDriverGateway</string>
    <string name="company_name">Fábrica de Ideias</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="beacon_numero_txt">\?</string>
    <string name="sensibilidade_txt">Sensibilidade</string>
    <string name="latencia_txt">Latência</string>
    <string name="action_settings">Settings</string>
    <string name="cadastro_beacon_menu_txt">Cadastrar Beacon</string>
    <string name="cadastro_carro_menu_txt">Cadastrar Carro</string>
    <string name="relatorio_carro_menu_txt">Relatório de Carros</string>
    <string name="relatorio_beacon_menu_txt">Relatório Beacon</string>
    <string name="scan_beacon_menu_txt">Scan Beacon</string>
    <string name="teste_con_menu_txt">Testar Conexão</string>
    <string name="config_menu_text">Configuração</string>
    <string name="sair_menu_txt">Sair</string>
    <string name="sensibilidade_latencia_valor_padrao">0</string>
    <string name="sem_rede_aviso">Não há conexão de dados disponível</string>
    <string name="com_rede_info">Rede disponível</string>
    <string name="ip_gateway_label">IP do Dispositivo</string>

    <string name="numero_beacon_label">Beacon</string>
    <string name="ip_gateway_hint">IP do Gateway</string>

    <string name="beacon_ja_cadastrado">Beacon já está cadastrado. Atualizar nome ou carro atrelado?</string>

    <string name="atualizar_beacon_title">Atualização do Beacon</string>
    <string name="novo_nome_hint">Novo nome do Beacon</string>
    <string name="atualizar_cadastro_btn">Atualizar Cadastro</string>

    <string name="nome_beacon_hint">Nome amigável do Beacon</string>
    <string name="finalizar_cadastro_beacon_btn">Cadastrar</string>

    <string name="sucesso_msg">Processo terminado com sucesso!</string>

    <string name="relatorio_beacon_txt">Beacons Cadastrados</string>

    <string name="progresso_msg">Comunicando com Banco</string>
    <string name="progresso_tittle">Aguarde</string>

    <string name="scan_beacon_title">Beacons no Alcance</string>
    <string name="det_beacon">Detalhes do Beacon</string>
    <string name="rssi_label">Rssi:</string>
    <string name="distancia_label">Distância:</string>

    <string name="carro_detalhes_title">Detalhes do Carro</string>

    <string name="nome_carro_label">Nome amigável:</string>
    <string name="beacon_associado_label">Beacon associado:</string>

    <string name="cadastro_carro_titulo">Cadastro de Carros</string>
    <string name="carro_nome_hint">Nome do Carro</string>
    <string name="placa_carro_hint">Placa do Carro</string>
    <string name="cadastro_carro_btn">Cadastrar Carro</string>
    <string name="validacao_cadastro_msg">Preencha todos os campos</string>

    <string name="teste_con_ok">Comunicação com internet bem sucessedida</string>
    <string name="teste_con_erro">Comunicação com internet falhou</string>
    <string name="teste_con_title">Pressione o botão para \n testar comunicação</string>
    <string name="teste_con_btn">Testar</string>

    <string name="calibrar_aviso">Coloque o Beacon a 1 metro antes de continuar</string>

    <string name="carro_cadastrado_label">Carro cadastrado:</string>
    <string name="deteccoes_beacon_label">Numero de detecções:</string>
    <string name="nome_beacon_label">Nome do beacon:</string>
    <string name="ultima_deteccao_beacon">Última Detecção</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
