<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cadastro_beacon"
            android:icon="@drawable/ic_bluetooth_black_24dp"
            android:title="@string/cadastro_beacon_menu_txt" />
        <item
            android:id="@+id/cadastro_carro"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/cadastro_carro_menu_txt" />
        <item
            android:id="@+id/relatorio_beacon"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/relatorio_beacon_menu_txt" />
        <item
            android:id="@+id/relatorio_carros"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/relatorio_carro_menu_txt" />
        <item
            android:id="@+id/scan_beacon"
            android:icon="@drawable/ic_bluetooth_searching_black_24dp"
            android:title="@string/scan_beacon_menu_txt" />
        <item
            android:id="@+id/teste_con"
            android:icon="@drawable/ic_signal_cellular_connected_no_internet_3_bar_black_24dp"
            android:title="@string/teste_con_menu_txt" />
        <item
            android:id="@+id/config"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/config_menu_text" />
        <item
            android:id="@+id/sair"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sair_menu_txt" />
    </group>

</menu>
