<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.betho.taxidrivergateway.MainActivity"
    tools:showIn="@layout/app_bar_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_beacon_label"
        android:id="@+id/textView2"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="169dp" />

    <TextView
        android:id="@+id/beacon_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beacon_numero_txt"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="100dp"
        tools:layout_editor_absoluteX="185dp" />

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="303dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensibilidade_txt"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/sensibilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:max="10"
            app:layout_constraintLeft_toLeftOf="@+id/tempo"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cardView3"
        tools:layout_editor_absoluteY="189dp"
        tools:layout_editor_absoluteX="76dp">

        <EditText
            android:id="@+id/ip_gateway"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/ip_gateway_hint"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="362dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <SeekBar
            android:id="@+id/tempo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:max="5"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="369dp" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
